# metastuff-clang-generator

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
